# mail-client-skill

./: .gitignore  Makefile  README.md
mail-client/: SKILL.md  install-skill.sh  pyproject.toml
mail-client/scripts/: cmd_folders.py  cmd_list.py  cmd_manage.py  cmd_read.py  cmd_reply.py  cmd_search.py  cmd_send.py  main.py  utils.py
mail-client/templates/: config.yaml
