[project]
name = "mail-skill"
version = "1.0.0"
description = "IMAP/SMTP email client CLI – read and write emails from the terminal"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "imapclient>=3.0",
    "python-dateutil>=2.9",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
